[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/enemyMove.gd" type="Script" id=1]
[ext_resource path="res://sprites/it.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.59092, 7.9694 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.0158, 15.9388 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.3479, 16.437 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.1818, 16.1049 )

[node name="Clown" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Area2D_1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_1"]
shape = SubResource( 3 )

[node name="Area2D_2" type="Area2D" parent="."]
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_2"]
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Area2D_3" type="Area2D" parent="."]
collision_layer = 8192
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_3"]
shape = SubResource( 5 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D_1" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Area2D_2" to="." method="_on_Area2D_2_area_entered"]
[connection signal="area_entered" from="Area2D_3" to="." method="_on_Area2D_3_area_entered"]
